# facial_recognition

./: .gitignore  hp.json  main.py  pyproject.toml
src/: model.py  test.py  train.py  utils.py
