[project]
name = "facial-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
VIRTUAL_ENV="venv"
dependencies = [
    {name = "torch"}, 
    {name = "torchvision"},
    {name = "opencv-python"}, 
    {name = "tqdm"}
]

[tool.pyright]
venvPath = "."
venv = "venv"

